# rwhet_react

./: .gitignore  README.md  global.mod  makefile  react.f90  run  rwhet4.1.f90
ADRE/: ADRE_mod.f90  CMakeLists.txt  dolo_ADRE.f90  makefile  run  time_concs.txt
ADRE/plotting/: plot_data.m
RPT/: RPT_dolo.f90  RPT_mod.f90  particles.f90
RRWHET/: RPT_mod.f90  blah.f90  makefile  run  rwhet4.1.f90  rwreact.f90  test.f90  time
RRWHET/RRWHET_exe.dSYM/Contents/: Info.plist
RRWHET/example_4/: example4.opc
RRWHET/mike_RPT/: RPT_dolo.f90  RPT_mod.f90  time
RRWHET/mike_RPT/plotting/: plot_data.m  plot_data.py
RRWHET/rw_dolomite/: dolomite.bnd  dolomite.opc  dolomite.par  dolomite.pnt  dolomite.rxn  filenames  fort.32  plot_conc.m  plot_conc.py
RWHET/: makefile  run  rwhet4.1.f90
RWHET/example_4/: example4.cnf  example4.mdt  run
RWHET/rw_dolomite/: dolomite.bnd  dolomite.opc  dolomite.par  dolomite.vlc  example4.cnf  plot_conc.py
example_4/: example4.bnd  example4.bth  example4.cnf  example4.con  example4.dbg  example4.int  example4.mdt  example4.mom  example4.out  example4.par  example4.pnt  example4.prt  example4.vlc
example_4/MODFLOW/: example4.bas  example4.nam  example4.sip  example4.ufm  example4.wel
mike_RPT/: RPT_mod.f90  makefile  run
mike_RPT/plotting/: plot_particles.m
react_test/: ADRE_mod.f90  dolo_ADRE.f90  makefile  plot_data.m  plot_data.py  react.f90  reaction_test.f90  run  test_trans.f90
rw_dolomite/: dolomite.opc  dolomite.par  example4.par
rw_dolomite/MODFLOW/: example4.bcf
src/: rwhet4.1.f90
(+3 files in other folders)
